--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
     <p>Hello there</p>
 
     <form>
-        <label for="Username">Username:</label>
-        <input type="text" id="Username" name="Username"><br><br>
-        <label for="Password">Password:</label>
-        <input type="text" id="Password" name="Password"><br><br>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username"><br><br>
+        <label for="password">Password:</label>
+        <input type="text" id="password" name="password"><br><br>
         <input type="submit" value="Submit">
       </form>
 
