--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 
     <form>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br><br>
+        <input type="Username" id="username" name="username"><br><br>
         <label for="password">Password:</label>
-        <input type="text" id="password" name="password"><br><br>
+        <input type="Password" id="password" name="password"><br><br>
         <input type="submit" value="Submit">
       </form>
 
