Server virker nu med redirect mangler at sende data

--- a/private/userpage.html
+++ b/private/userpage.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>YOU DID IT</h1>
+    
+        <h1>sdfdfsdf</h1> 
 
-    <script>
-        window.alert("LOL NICE");
-    </script>
+
+
+
+        <script src="table.js"></script>
 </body>
 </html>
