--- a/private/userpage.html
+++ b/private/userpage.html
@@ -7,12 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
-        <h1>sdfdfsdf</h1> 
+    <div id="timesheetcontainer"></div>
+    </body>
+<script src="code.js"></script>
 
 
-
-
-        <script src="table.js"></script>
 </body>
 </html>
