--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Timenia</title>
+    <link rel="icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>Hello there</p>
-    
-    <form>
-        <label for="username">Username:</label>
-        <input type="Username" id="username" name="username"><br><br>
-        <label for="password">Password:</label>
-        <input type="Password" id="password" name="password"><br><br>
-        <input type="submit" value="Submit">
-      </form>
-
-
-
-
+    <section class="portal">
+        <form action="#">
+            <div class="title">
+                <h1>LOG IN</h1>
+                <p>Welcome back! Please enter your details.</p>
+            </div>
+            <div class="input-field">
+                <input type="text" id="username" placeholder=" ">
+                <label for="username">Username</label>
+            </div>
+            <div class="input-field">
+                <input type="password" id="password" placeholder=" ">
+                <label for="password">Password</label>
+                <img id="show-hide-pass" src="assets/show-eye.svg" alt="">
+            </div>
+            <a href="./home.html" id="forgot-pass">Forgot Password</a>
+            <button id="signin">Sign in</button>
+        </form>
+    </section>
 
     <script src="LoginPage.js"></script>
-    
 </body>
 </html>
