Row remove and add function

--- a/private/userpage.html
+++ b/private/userpage.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <div id="timesheetcontainer"></div>
+    <button id="AddRow">Add Row</button>
     </body>
 <script src="code.js"></script>
 
