--- a/admin/admin.html
+++ b/admin/admin.html
@@ -5,28 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="adminStylesheet.css">
 </head>
 <body>
     <h1>Welcome Admin</h1>
 
-    <button id="UserButton">Create user</button>
-    <button>Create project</button>
-    <button>Set user level</button>
+    <button id="userButton">Create user</button>
+    <button id="projectButton">Create project</button>
+    <button id="UserLevelButton">Set user level</button>
 
 
 
     <div id="userCreation">
-        <form>
-            <label for=""></label>
+        <form id="userCreationForm">
             <label for="username">The Username:</label>
             <input type="text" id="username" name="username"><br><br>
             <label for="password">The password:</label>
             <input type="text" id="password" name="password"><br><br>
-            <input type="submit" value="Submit" id="userCreationForm">
+            <input type="submit" value="Submit">
           </form>
     </div>
 
 
+    <div id="projectCreation">
+        <h1>Hello pro</h1>
+    </div>
+
+    <div id="setUserLevel">
+        <h1>Hello level</h1>
+
+    </div>
+
+
+
+<script src="adminCode.js"></script> 
 
 </body>
 </html>
