User Creation on the website works

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -18,10 +18,10 @@
 
     <div id="userCreation">
         <form id="userCreationForm">
-            <label for="username">The Username:</label>
-            <input type="text" id="username" name="username"><br><br>
-            <label for="password">The password:</label>
-            <input type="text" id="password" name="password"><br><br>
+            <label for="createUsername">The Username:</label>
+            <input type="text" id="createUsername" name="createUsername"><br><br>
+            <label for="createPassword">The password:</label>
+            <input type="text" id="createPassword" name="createPassword"><br><br>
             <input type="submit" value="Submit">
           </form>
     </div>
