--- a/admin/admin.html
+++ b/admin/admin.html
@@ -28,7 +28,26 @@
 
 
     <div id="projectCreation">
-        <h1>Hello pro</h1>
+        <form id="projectCreationForm">
+            <label for="projectId">The Projecets ID</label>
+            <input type="text" id="projectId" name="projectId"> <br><br>
+
+            <label for="projectName">The Projecets name</label>
+            <input type="text" id="projectName" name="projectName"> <br><br>
+
+            <label for="projectStartDate">The Projecets start date</label>
+            <input type="text" id="projectStartDate" name="projectStartDate"> <br><br>
+
+            <label for="projectEndDate">The Projecets end date</label>
+            <input type="text" id="projectEndDate" name="projectEndDate"> <br><br>
+
+            <label for="projectHoursSpent">The Projecets hours spent</label>
+            <input type="text" id="projectHoursSpent" name="projectHoursSpent"> <br><br>
+
+            <input type="submit" value="Submit">
+
+          </form>
+
     </div>
 
     <div id="setUserLevel">
