--- a/admin/admin.html
+++ b/admin/admin.html
@@ -48,12 +48,23 @@
     </div>
 
     <div id="setUserLevel">
-        <form id="SearchUserLevel">
-        <label for="SeeUserLevel">Search for the users current level</label>
-        <input type="text" id="SeeUserLevel" name="SeeUserLevel"> <br><br>
+        <form id="searchUserLevel">
+        <label for="seeUserLevel">Search for the users current level</label>
+        <input type="text" id="seeUserLevel" name="seeUserLevel">
         <input type="submit" value="Submit">
-        <div id="SeeUserInfo"></div>
         </form>
+        <div id="SeeUserInfo"></div>
+
+        <form id="setUserLevelForm">
+            <label for="setUserLevelName">The users name</label>
+            <input type="text" id="setUserLevelName" name="setUserLevelName"> <br> <br>
+
+            <label for="setUserLevelValue">The users level</label>
+            <input type="number" id="setUserLevelValue" name="setUserLevelValue">
+
+            <input type="submit" value="Submit">
+            </form>
+        
         
 
     </div>
