--- a/manager/manager.html
+++ b/manager/manager.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     <h1>Hello</h1>
+
+    <div>
+        <form id="manggeUser">
+            <label for="usernameBasic">Username</label>
+            <input type="text" id="usernameBasic" name="usernameBasic">
+            <input type="submit" value="Submit">
+            <div id="ManagerDetails"></div>
+        </form>
+    </div>
+
+
+<script src="manager.js"></script>
 </body>
 </html>
