Manager kan nu se projektor de er linkede til

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -13,7 +13,7 @@
     <button id="userButton">Create user</button>
     <button id="projectButton">Create project</button>
     <button id="userLevelButton">Set user level</button>
-    <button id="projectLinkButton">Create project link</button>
+    <button id="createManagerButton">Create Manager</button>
 
 
 
@@ -71,17 +71,7 @@
 
     </div>
 
-    <div id="createUserManagerLink">
-        <form id="createUserManagerLinkForm">
-            <label for="managerToLink">The manger to link to</label>
-            <input type="text" name="managerToLink" id="managerToLink"> <br> <br>
-            <label for="userToLink">The user to link to</label>
-            <input type="text" name="userToLink" id="userToLink"> <br> <br>
-            <label for="projectToLinkForUser">The project to link to</label>
-            <input type="text" name="projectToLinkForUser" id="projectToLinkForUser"> <br> <br>
-            <input type="submit" value="Submit">
-        </form>
-    </div>
+    
 
     <div id="createManagerForProject">
         <form id="createManagerForProjectForm">
