Tabel add up function

--- a/private/homepage.html
+++ b/private/homepage.html
@@ -9,10 +9,10 @@
 <body>
     
 
-    <h1>Weclome </h1>
+    <h1>Welcome </h1>
     <a href="userpage.html">See current time sheet</a> <br>
     <a href="/admin/admin.html">Admin</a>
-
+    
 
 </body>
 </html>
