Fixet link til manager

--- a/private/homepage.html
+++ b/private/homepage.html
@@ -12,6 +12,8 @@
     <h1>Welcome </h1>
     <a href="userpage.html">See current time sheet</a> <br>
     <a href="/admin/admin.html">Admin</a>
+    <a href="/manager/manager.html">Manager</a>
+
     
 
 </body>
