--- a/manager/manager.html
+++ b/manager/manager.html
@@ -27,7 +27,8 @@
 
     <div id="showProjects">
         <button id="showProjectsButton">Show Projects</button>
-        <div id="showProjectsReplace"></div>
+        <div id="showProjectsReplace">
+        </div>
     </div>
 
 
