manager and comments

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin</title>
     <link rel="stylesheet" href="adminStylesheet.css">
 </head>
 <body>
     <div class="container">
-        <div class="welcome-title"><span>welcome Admin</span></div>
+        <div class="welcome-title"><span>Welcome Admin</span></div>
         <div class="menu">
             <button id="userButton">Create user</button>
             <button id="projectButton">Create project</button>
