--- a/private/homepage.html
+++ b/private/homepage.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
     
-
-    <h1>Welcome </h1>
-    <a href="userpage.html">See current time sheet</a> <br>
-    <a href="/admin/admin.html">Admin</a>
-    <a href="/manager/manager.html">Manager</a>
-
+    <div class="welcome-title"><span>Welcome</span></div>
+    <div class="container">
+        <button><a href="userpage.html">See current time sheet</a> </button> 
+        <button><a href="/admin/admin.html">Admin</a></button>
+        <button><a href="/manager/manager.html">Manager</a></button>
+    </div>
     
 
 </body>
