--- a/admin/admin.html
+++ b/admin/admin.html
@@ -24,7 +24,7 @@
             <input type="text" id="createUsername" name="createUsername" placeholder="UserName" required><br><br>
             <label for="createPassword">New Password:</label>
             <input type="text" id="createPassword" name="createPassword" placeholder="PassWord" required><br><br>
-            <input type="submit" class="sbmt" value="Create User">
+            <input type="submit" class="sbmt" value="Create">
         </form>
     </div>
 
@@ -43,7 +43,7 @@
             <label for="projectHoursSpent">Total Hours</label>
             <input type="number" id="projectHoursSpent" name="projectHoursSpent" placeholder="0" required> <br><br>
 
-            <input type="submit" class="sbmt" value="Create Project">
+            <input type="submit" class="sbmt" value="Create">
 
         </form>
 
@@ -81,15 +81,11 @@
             <input type="submit" class="sbmt" value="Submit">
         </form>
     </div>
-
-    <div>
+<br>
+    <div class="pdf">
         <button id="exportButton">Get PDF</button>
-    </div>
-
-    <div>
         <button id="exportButtonXlsx">Get xlsx file</button>
     </div>
-
 </div>
 <script src="adminCode.js"></script> 
 
