--- a/private/userpage.html
+++ b/private/userpage.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>timeSheet</title>
+    <link rel="stylesheet" href="userpage.css">
 </head>
 <body>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <div id="timesheetcontainer"></div>
-    <button id="AddRow">Add Row</button>
+    <div class="btn"><button id="AddRow">Add Row</button></div>
     </body>
 <script src="code.js"></script>
 
