--- a/admin/admin.html
+++ b/admin/admin.html
@@ -81,6 +81,22 @@
             <input type="submit" class="sbmt" value="Submit">
         </form>
     </div>
+
+    <div id="createTaskForProject">
+        <form id="createTaskForProjectForm">
+            <label for="projectToLinkFortask">Project name</label>
+            <input type="text" name="projectToLinkFortask" id="projectToLinkFortask"> <br> <br>
+            <label for="taskName">Task name</label>
+            <input type="text" name="taskName" id="taskName"> <br> <br>
+            <label for="taskDescription">Task description</label>
+            <input type="text" name="taskDescription" id="taskDescription" placeholder="taskDescription" required> <br> <br>
+            <label for="estimate">estimate</label>
+            <input type="number" name="estimate" id="estimate" placeholder="0" required> <br> <br>
+            <input type="submit" class="sbmt" value="Submit">            
+        </form>
+    </div>
+
+
 <br>
     <div class="pdf">
         <button id="exportButton">Get PDF</button>
