--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <div class="nav">
+    <div id="menu-text" class="nav">
         <div class="menu-button">
-            <p id="menu-text" class="text unselectable">
+            <p class="text unselectable">
                 <i id="menu-icon" class="fa-solid fa-bars"></i> MENU
             </p>
         </div>
