--- a/private/userpage.html
+++ b/private/userpage.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <div id="timesheetcontainer"></div>
     <div class="btn"><button id="AddRow">Add Row</button></div>
+    <button id="timeSheetButton" name="timeSheetButton">Submit timeSheet</button>
     </body>
 <script src="code.js"></script>
 
