--- a/private/userpage.html
+++ b/private/userpage.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>timeSheet</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="userpage.css">
 </head>
 <body>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <div id="timesheetcontainer"></div>
+    <div class="timesheet" id="timesheetcontainer"></div>
     <div class="btn"><button id="AddRow">Add Row</button></div>
     </body>
 <script src="code.js"></script>
