--- a/private/homepage.html
+++ b/private/homepage.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
     
     <div class="welcome-title"><span>Welcome</span></div>
     <div class="container">
-        <button><a href="userpage.html">See current time sheet</a> </button> 
+        <button><a href="userpage.html">Time sheet</a> </button> 
         <button><a href="/admin/admin.html">Admin</a></button>
         <button><a href="/manager/manager.html">Manager</a></button>
     </div>
