Man kan nu logge ud

--- a/private/homepage.html
+++ b/private/homepage.html
@@ -20,6 +20,10 @@
     <div id="profileInfo">
     </div>
 
+    <div id="Logout">
+        <button id="logoutButton"> logout</button>
+    </div>
+
     <script src="homepage.js"></script>
 </body>
 </html>
