Admin Response implemented

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -15,15 +15,22 @@
             <button id="projectButton">Create project</button>
             <button id="userLevelButton">Set user level</button>
             <button id="createManagerButton">Create Manager</button>
+            <button id="CreateTaskButton"> Create Task</button>
         </div>
 <br>
 
     <div id="userCreation">
         <form id="userCreationForm">
             <label for="createUsername">New Username:</label>
-            <input type="text" id="createUsername" name="createUsername" placeholder="UserName" required><br><br>
+            <input type="text" id="createUsername" name="createUsername" placeholder="Username" required><br><br>
             <label for="createPassword">New Password:</label>
-            <input type="text" id="createPassword" name="createPassword" placeholder="PassWord" required><br><br>
+            <input type="text" id="createPassword" name="createPassword" placeholder="Password" required><br><br>
+            <label for="FullName">User's Full name</label>
+            <input type="text" id="FullName" name="FullName" placeholder="Full Name"><br><br>
+            <label for="PhoneNumber">User's PhoneNumber</label>
+            <input type="text" id="PhoneNumber" name="PhoneNumber" placeholder="PhoneNumber"><br><br>
+            <label for="Email">User's email adress</label>
+            <input type="text" id="Email" name="Email" placeholder="Email Adress"><br><br>
             <input type="submit" class="sbmt" value="Create">
         </form>
     </div>
