--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
          <div class="login-title"><span>NORDUnet Login</span></div>
          <form action="#">
             <div class="linje">
-               <input type="text" id="username" placeholder="Username" required>
+               <input type="text" id="username" placeholder="Username" maxlength="25" required>
             </div>
             <div class="linje">
-               <input type="password" id="password" placeholder="Password" required>
+               <input type="password" id="password" placeholder="Password" maxlength="25" required>
             </div>
             <div class="linje btn">
                <input type="submit" value="Login">
