Admin sender nu svar

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -68,8 +68,11 @@
             <label for="setUserLevelName">Username</label>
             <input type="text" id="setUserLevelName" name="setUserLevelName" placeholder="UserName" required> <br>
 
-            <label for="setUserLevelValue">UserLevel</label>
-            <input type="number" id="setUserLevelValue" name="setUserLevelValue" placeholder="0" required><br><br>
+            <label for="SetUserAdmin">Admin</label>
+            <input type="checkbox" id="SetUserAdmin" name="SetUserAdmin"> <br><br>
+            
+            <label for="SetUserManager">Manager</label>
+            <input type="checkbox" id="SetUserManager" name="SetUserManager"><br><br>
 
             <input type="submit" class="sbmt" value="Submit">
             </form>
