--- a/private/homepage.html
+++ b/private/homepage.html
@@ -15,18 +15,20 @@
     
     <div class="welcome-title"><span>Welcome</span></div>
     <div class="container">
-        <button><a href="userpage.html">Time sheet</a> </button> 
-        <button><a href="/admin/admin.html">Admin</a></button>
-        <button><a href="/manager/manager.html">Manager</a></button>
-    </div>
+        <div class="innermenu">
+            <button class="centered"><a href="userpage.html">Time sheet</a> </button> 
+            <button class="centered" id="AdminButton" ><a href="/admin/admin.html">Admin</a></button>
+            <button class="centered" id="ManagerButton"><a href="/manager/manager.html">Manager</a></button>
+        </div>
+        <div class="logoutdiv">
+            <button id="logoutButton">Logout</button>
+            </div>
+</div>
     
 
     <div id="profileInfo">
     </div>
 
-    <div id="Logout">
-        <button id="logoutButton"> logout</button>
-    </div>
 
     <script src="homepage.js"></script>
 </body>
