--- a/private/userpage.html
+++ b/private/userpage.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <div class="timesheet" id="timesheetcontainer"></div>
     <div class="btn"><button id="AddRow">Add Row</button></div>
-    <button id="timeSheetButton" name="timeSheetButton">Submit timeSheet</button>
+    <button id="timeSheetButton" name="timeSheetButton">Submit Timesheet</button>
 
     <script src="code.js"></script>
 
