Added response from server

--- a/manager/Aprovetime.html
+++ b/manager/Aprovetime.html
@@ -11,8 +11,9 @@
 
 
     <div id="UserHolder"></div>
-    <div id="CurrentTimeSheet"></div>
-    
+    <table id="CurrentTimeSheet">
+        
+    </table>    
     <script src="Aprovetime.js"></script>
 </body>
 </html>
