--- a/private/homepage.html
+++ b/private/homepage.html
@@ -16,8 +16,8 @@
     <div class="container">
         <div class="innermenu">
             <button class="centered"><a href="userpage.html">Time sheet</a> </button> 
-            <button class="centered" id="AdminButton" ><a href="/admin/admin.html">Admin</a></button>
-            <button class="centered" id="ManagerButton"><a href="/manager/manager.html">Manager</a></button>
+            <button class="centered" id="AdminButton" ><a href="https://cs-23-sw-2-04.p2datsw.cs.aau.dk/node0/admin/admin.html">Admin</a></button>
+            <button class="centered" id="ManagerButton"><a href="https://cs-23-sw-2-04.p2datsw.cs.aau.dk/node0/manager/manager.html">Manager</a></button>
         </div>
         <div class="logoutdiv">
             <button id="logoutButton">Logout</button>
