timesheet read and small fixes

--- a/private/userpage.html
+++ b/private/userpage.html
@@ -17,6 +17,8 @@
     <button id="timeSheetButton" name="timeSheetButton">Submit Timesheet</button>
 
     <script src="code.js"></script>
+    <script src="timeSheet.js"></script>
+
 
 
 </body>
