--- a/admin/admin.html
+++ b/admin/admin.html
@@ -18,7 +18,8 @@
             <button id="userButton">Create user</button>
             <button id="projectButton">Create project</button>
             <button id="userLevelButton">Set user level</button>
-            <button id="createManagerButton">Create Manager</button>
+            <button id="ProjectManagerButton">Create Project Manager</button>
+            <button id="LinkUserToManagerButton">Add user to manager</button>
             <button id="CreateTaskButton">Create Task</button>
             <button id="EmailNotificationButton">Email Notification</button>
         </div>
@@ -87,15 +88,29 @@
     </div>
 
     
-    <div id="createManagerForProject">
-        <form id="createManagerForProjectForm">
-            <label for="createManager">Upgrade User to Manager</label>
-            <input type="text" name="createManager" id="createManager" placeholder="UserName" required> <br> <br>
-            <label for="projectToLinkForManager">link Project</label>
-            <input type="text" name="projectToLinkForManager" id="projectToLinkForManager" placeholder="ProjectName" required> <br> <br>
-            <input type="submit" class="sbmt" value="Submit">
+    <div id="CreateProjectManagerContainer">
+        <form id="CreateProjectManagerForm"> 
+            <label for="ProjectManager">User To make Project Manager</label>
+            <input type="text" id="ProjectManager" name="ProjectManager"><br> <br>
+            <label for="ProjectForProjectManager">Project to link</label>
+            <input type="text" id="ProjectForProjectManager" name="ProjectForProjectManager"><br> <br>
+            <input type="submit" class="sbmt" value="Submit">            
         </form>
     </div>
+
+
+    <div id="LinkUserToManagerContainer">
+        <form id="LinkUserToManagerForm">
+            <label for="ManagerToLink">Manager</label>
+            <input type="text" id="ManagerToLink" name="ManagerToLink"><br> <br>
+            <label for="UserToLinkToManager">User</label>
+            <input type="text" id="UserToLinkToManager" name="UserToLinkToManager"><br> <br>
+            <input type="submit" class="sbmt" value="Submit">            
+        </form>
+
+    </div>
+
+
 
     <div id="createTaskForProject">
         <form id="createTaskForProjectForm">
