--- a/admin/admin.html
+++ b/admin/admin.html
@@ -91,9 +91,9 @@
     <div id="CreateProjectManagerContainer">
         <form id="CreateProjectManagerForm"> 
             <label for="ProjectManager">User To make Project Manager</label>
-            <input type="text" id="ProjectManager" name="ProjectManager"><br> <br>
+            <input type="text" id="ProjectManager" name="ProjectManager" placeholder="UserName" ><br> <br>
             <label for="ProjectForProjectManager">Project to link</label>
-            <input type="text" id="ProjectForProjectManager" name="ProjectForProjectManager"><br> <br>
+            <input type="text" id="ProjectForProjectManager" name="ProjectForProjectManager" placeholder="ProjectName" ><br> <br>
             <input type="submit" class="sbmt" value="Submit">            
         </form>
     </div>
@@ -102,9 +102,9 @@
     <div id="LinkUserToManagerContainer">
         <form id="LinkUserToManagerForm">
             <label for="ManagerToLink">Manager</label>
-            <input type="text" id="ManagerToLink" name="ManagerToLink"><br> <br>
+            <input type="text" id="ManagerToLink" name="ManagerToLink" placeholder="ManagerName" ><br> <br>
             <label for="UserToLinkToManager">User</label>
-            <input type="text" id="UserToLinkToManager" name="UserToLinkToManager"><br> <br>
+            <input type="text" id="UserToLinkToManager" name="UserToLinkToManager" placeholder="UserName" ><br> <br>
             <input type="submit" class="sbmt" value="Submit">            
         </form>
 
@@ -115,9 +115,9 @@
     <div id="createTaskForProject">
         <form id="createTaskForProjectForm">
             <label for="projectToLinkFortask">Project name</label>
-            <input type="text" name="projectToLinkFortask" id="projectToLinkFortask"> <br> <br>
+            <input type="text" name="projectToLinkFortask" id="projectToLinkFortask" placeholder="ProjectName" > <br> <br>
             <label for="taskName">Task name</label>
-            <input type="text" name="taskName" id="taskName"> <br> <br>
+            <input type="text" name="taskName" id="taskName" placeholder="TaskName" > <br> <br>
             <label for="taskDescription">Task description</label>
             <input type="text" name="taskDescription" id="taskDescription" placeholder="taskDescription" required> <br> <br>
             <label for="estimate">estimate</label>
