--- a/manager/Aprovetime.html
+++ b/manager/Aprovetime.html
@@ -12,9 +12,10 @@
 
 
     <div id="UserHolder"></div>
-    <table id="CurrentTimeSheet">
-        
+    <table id="CurrentTimeSheet">        
     </table>    
+    <div id="ButtonHolder"> </div>
+
     <script src="Aprovetime.js"></script>
 </body>
 </html>
