--- a/private/homepage.html
+++ b/private/homepage.html
@@ -18,6 +18,7 @@
             <button class="centered"><a href="userpage.html">Time sheet</a> </button> 
             <button class="centered" id="AdminButton" ><a href="/admin/admin.html">Admin</a></button>
             <button class="centered" id="ManagerButton"><a href="/manager/manager.html">Manager</a></button>
+            <button class="centered" id="ProjectManager"><a href="/ProjectManager/ProjectManager.html">Project Manager</a></button>
         </div>
         <div class="logoutdiv">
             <button id="logoutButton">Logout</button>
