--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <div id="menu-text" class="nav">
-        <div class="menu-button">
+    <div class="nav">
+        <div id="menu-text" class="menu-button">
             <p class="text unselectable">
                 <i id="menu-icon" class="fa-solid fa-bars"></i> MENU
             </p>
@@ -17,6 +17,9 @@
             <li><a href="../userpage.html">See current time sheet</a></li>
             <li><a href="../admin/admin.html">Admin</a></li>
             <li><a href="../manager/manager.html">Manager</a></li>
+            <div class="signal">
+             <img src="Signal.svg" style="width: 500px;">
+            </div>
         </ul>
     </div>
 </body>
