quick password bug

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -30,7 +30,7 @@
             <label for="createUsername">New Username:</label>
             <input type="text" id="createUsername" name="createUsername" placeholder="Username" required><br><br>
             <label for="createPassword">New Password:</label>
-            <input type="text" id="createPassword" name="createPassword" placeholder="Password" required><br><br>
+            <input type="password" id="createPassword" name="createPassword" placeholder="Password" required><br><br>
             <label for="FullName">User's Full name</label>
             <input type="text" id="FullName" name="FullName" placeholder="Full Name"><br><br>
             <label for="PhoneNumber">User's PhoneNumber</label>
