userproject link virker nu

--- a/ProjectManager/ProjectManager.html
+++ b/ProjectManager/ProjectManager.html
@@ -14,13 +14,11 @@
     <div class="welcome-title"><span>Welcome Project Manager</span></div>
     
     <div class="menu">
-        <button id="createUserManagerLinkButton">Create a link to a user</button>
+        <button id="LinkUserToProjectkButton">Create a link to a user</button>
         <button id="showProjectsButton">Show Projects</button>
         <br><br>
-        <div id="createUserManagerLink">
-            <form id="createUserManagerLinkForm">
-                <label for="managerToLink">link Manager</label>
-                <input type="text" name="managerToLink" id="managerToLink" placeholder="ManagerName" required> <br> <br>
+        <div id="LinkUserToProjectContainer">
+            <form id="LinkUserToProjectForm">
                 <label for="userToLink">link User</label>
                 <input type="text" name="userToLink" id="userToLink" placeholder="UserName" required> <br> <br>
                 <label for="projectToLinkForUser">link Project</label>
