--- a/admin/admin.html
+++ b/admin/admin.html
@@ -52,6 +52,9 @@
             <label for="projectEndDate">End Date</label>
             <input type="date" id="projectEndDate" name="projectEndDate"  required> <br><br>
 
+            <label for="ProjectManager">Manager</label>
+            <input type="text" id="ProjectManager" name="ProjectManager" placeholder="ProjectManager" required> <br><br>
+
             <label for="projectHoursSpent">Total Hours</label>
             <input type="number" id="projectHoursSpent" name="projectHoursSpent" placeholder="0" required> <br><br>
 
