--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>NORDUnet LOG IN</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="stylesheet.css">
+
 </head>
 <body>
    <div class="container">
@@ -13,15 +17,15 @@
          <div class="login-title"><span>NORDUnet Login</span></div>
          <form action="#">
             <div class="linje">
-               <input type="text" id="username" placeholder="Username" required>
+               <input type="text" id="username" placeholder="Username" maxlength="25" required>
             </div>
             <div class="linje">
-               <input type="password" id="password" placeholder="Password" required>
+               <input type="password" id="password" placeholder="Password" maxlength="25" required>
             </div>
             <div class="linje btn">
                <input type="submit" value="Login">
             </div>
-            <div class="pass-word"><a href="#"> Forgot Password?</a></div>
+            
          </form>
       </div>
    </div>
