--- a/private/userpage.html
+++ b/private/userpage.html
@@ -4,14 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>timeSheet</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="userpage.css">
 </head>
 <body>
+    <!--Navigation Bar Start--><div>
+    <script src="https://kit.fontawesome.com/ffe0f0379f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="navbar/navbar.css">
+        <div class="nav">
+            <div id="menu-text" class="menu-button">
+                <p class="text unselectable">
+                    <i id="menu-icon" class="fa-solid fa-bars"></i> MENU
+                </p>
+            </div>
+        </div>
+        <div id="menu" class="menu-closed">
+            <ul class="unselectable">
+                <li><a class="navbar" id="NavHome" href="../private/homepage.html">Home</a></li>
+                <li><a class="navbar" id="NavSheet" href="../private/userpage.html">See Time Sheet</a></li>
+                <li><a class="navbar" id="NavAdmin" href="../admin/admin.html">Admin</a></li>
+                <li><a class="navbar" id="NavManager" href="../manager/manager.html">Manager</a></li>
+                <li><a class="navbar" id="NavProjectManager" href="../ProjectManager/ProjectManager.html">Project Manager</a></li>
+                <li><a class="navbar" id="NavLogout">Log Out</a></li>
+                <div class="signal">
+                 <img src="navbar/Signal.svg" style="width: 500px;">
+                </div>
+            </ul>
+        </div>
+    
+        <script src="navbar/navbar.js"></script>
+    </div><!--Navigation Bar End-->
+    
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-    <div id="timesheetcontainer"></div>
-    <button id="AddRow">Add Row</button>
-    </body>
-<script src="code.js"></script>
+    <div class="timesheet" id="timesheetcontainer"></div>
+    <div class="btn"><button id="AddRow">Add Row</button></div>
+    <button id="timeSheetButton" name="timeSheetButton">Submit Timesheet</button>
+
+    <script src="code.js"></script>
+    <script src="timeSheet.js"></script>
+
 
 
 </body>
