--- a/ProjectManager/ProjectManager.html
+++ b/ProjectManager/ProjectManager.html
@@ -15,6 +15,7 @@
     
     <div class="menu">
         <button id="LinkUserToProjectkButton">Create a link to a user</button>
+        <button id="CreateTaskButton">Create Task</button>
         <button id="showProjectsButton">Show Projects</button>
         <br><br>
         <div id="LinkUserToProjectContainer">
@@ -26,6 +27,23 @@
                 <input type="submit" class="sbmt" value="Submit">
             </form>
         </div>
+
+
+        <div id="createTaskForProject">
+            <form id="createTaskForProjectForm">
+                <label for="projectToLinkFortask">Project name</label>
+                <input type="text" name="projectToLinkFortask" id="projectToLinkFortask" placeholder="ProjectName" > <br> <br>
+                <label for="taskName">Task name</label>
+                <input type="text" name="taskName" id="taskName" placeholder="TaskName" > <br> <br>
+                <label for="taskDescription">Task description</label>
+                <input type="text" name="taskDescription" id="taskDescription" placeholder="taskDescription" required> <br> <br>
+                <label for="estimate">estimate</label>
+                <input type="number" name="estimate" id="estimate" placeholder="0" required> <br> <br>
+                <input type="submit" class="sbmt" value="Submit"    >            
+            </form>
+        </div>
+
+
 
         <div id="showProjects">
             <div id="showProjectsReplace">
