--- a/private/homepage.html
+++ b/private/homepage.html
@@ -16,6 +16,7 @@
     <div class="container">
         <div class="innermenu">
             <button class="centered"><a href="userpage.html">Time sheet</a> </button> 
+            <button class="centered"><a href="previous_timesheet/previousTimesheet.html">Previous time sheet</a> </button> 
             <button class="centered" id="AdminButton" ><a href="/admin/admin.html">Admin</a></button>
             <button class="centered" id="ManagerButton"><a href="/manager/manager.html">Manager</a></button>
             <button class="centered" id="ProjectManagerButton"><a href="/ProjectManager/ProjectManager.html">Project Manager</a></button>
